# teman

./: .gitignore  docker-compose.yml  dump.rdb  pyproject.toml  shell.nix
sql/: teman.sql
src/: manage.py
src/app_home/: views.py
src/app_home/templates/app_home/: home.html
src/app_login/: urls.py  views.py
src/app_login/migrations/: 0001_create_user_schema.py  0002_create_space_table.py  0003_create_user_table.py  0004_create_session_table.py  0005_create_task_table.py  0006_create_leaderboard_table.py  0007_create_user_statistic_table.py  0008_create_space_member_table.py  0009_create_user_role_table.py
src/app_login/static/app_login/: output.css
src/app_login/templates/app_login/: index.html
src/app_users/: forms.py  models.py  signals.py  urls.py  views.py
src/app_users/migrations/: 0001_initial.py  0001_initial.sql
src/app_users/templates/app_users/: profile.html  profile_edit.html
src/teman_wfh/: asgi.py  settings.py  urls.py  wsgi.py
src/templates/: base.html
src/templates/includes/: header.html
src/templates/layouts/: blank.html
