[project]
name = "teman"
version = "0.1.0"
description = "Web APP about sharing your pomodoro and share it to public"
authors = [
    {name = "kelompok 4", email = "evanarnanda@gmail.com"},
]
dependencies = [
    "django==5.0.6",
    "dotenv==0.0.5",
    "django-environ==0.11.2",
    "psycopg-binary==3.1.19",
    "psycopg2-binary==2.9.9",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
dev = "pdm run src/manage.py runserver"
tw-watch = "bunx tailwindcss -i ./app.css -o ./src/app_login/static/app_login/output.css --watch --minify"