[project]
name = "teman"
version = "0.1.0"
description = "Web APP about sharing your pomodoro and share it to public"
authors = [
    {name = "kelompok 4", email = "evanarnanda@gmail.com"},
]
dependencies = [
    "django>=5.0.6",
    "dotenv>=0.0.5",
    "pillow>=10.3.0",
    "django-cleanup>=8.1.0",
    "django-allauth>=0.63.3",
    "django-htmx>=1.17.3",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
dev = "pdm run src/manage.py runserver"
tw-watch = "bunx tailwindcss -i ./app.css -o ./src/app_login/static/app_login/output.css --watch --minify"